--- a/static/nav2.html
+++ b/static/nav2.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="../css/nav.css">
-<script type="text/javascript" src="../js/jquery.color.js"></script>
+<link rel="stylesheet" href="./static/css/nav.css">
+<script type="text/javascript" src="./static/js/jquery.color.js"></script>
 <script>
 	$(document).ready(function(){
 		if($(window).width() <= 768){
@@ -108,7 +108,7 @@
 	<form id="navi-phone-form">
 		<div id="navi-phone-panel" class="panel">
 			<input type="text">
-			<img id="navi-phone-search"src="../resource/navi-search-img.png">
+			<img id="navi-phone-search"src="static/resource/navi-search-img.png">
 		</div>
 	</form>
 	<ul id="navi-left-menu" class="navi-side-menu">
@@ -122,7 +122,7 @@
 	<form style="margin:0 auto; padding:0; display:inline;">
 		<div id="navi-panel"class="panel" >
 			<input id="navi-input"placeholder="Click for search" onfocus="naviFocusEvent(true)"></input>
-  			<img id="navi-search"src="../resource/navi-search-img.png"/>
+  			<img id="navi-search"src="static/resource/navi-search-img.png"/>
 		</div>
 	</form>
 	<ul id="navi-right-menu" class="navi-side-menu">
