--- a/static/tree.html
+++ b/static/tree.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="../js/jquery.treeView.js"></script>
-	<link rel="stylesheet" href="../css/jquery.treeView.css">
+	<script src="static/js/jquery.treeView.js"></script>
+	<link rel="stylesheet" href="static/css/jquery.treeView.css">
 	<code id="treeModel" style="display:none">
 	[
 	    { 
