--- a/static/html/nav2.html
+++ b/static/html/nav2.html
@@ -133,6 +133,7 @@
 		</li>
 		<li>
 			<a id="navi-right-menu-login" data-toggle="modal" data-target="#login-popup" href="#">Login</a>
+			<a id="navi-right-menu-hello"></a>
 		</li>
 	</ul>
 </nav>
